Use correct size when calculating overflow menu for new media controls

This CL makes use of the size_ member of the MediaControlsImpl when
updating the overflow menu for modern media controls. This fixes a bug
where a video of normal size will have all controls in the overflow
menu because it thinks the size is 0x0.

Bug: 805690
Change-Id: I11dc8f991696d4771f517d6cca585b3e293bb57a
Reviewed-on: https://chromium-review.googlesource.com/886656
Reviewed-by: Mounir Lamouri (slow) <mlamouri@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532897}
Former-commit-id: fdbfdc276f4734d1c17926303620d758480c48ff